--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@ h2 {
 </div>
 <ul>
     <li style="color:green;"><a style="color:green;" href="{{ url_for('generate_keys_pre') }}">Generate Keys_Check</a><br/></li>
-    <li style="color:green;"><a style="color:green;" href="{{ url_for('notdash') }}">Visual</a><br/></li>
+    <li style="color:green;"><a style="color:green;" href="{{ url_for('visual') }}">Visual</a><br/></li>
     <li style="color:green;"><a style="color:green;" href="{{ url_for('enter_keys') }}">I have the key(s)</a></li>
     {% if n > 0 and (e > 0 or d > 0) %}
         <li style="color:green;"><a style="color:green;" href="{{ url_for('crypto') }}">Proceed to Cryptography with the existing keys</a></li>
