--- a/templates/visual.html
+++ b/templates/visual.html
@@ -9,4 +9,11 @@
   var graphs = {{graphJSON | safe}};
   Plotly.plot('chart',graphs,{});
 </script>
+<br/>
+<br/>
+<br/>
+<div>
+    <a href="{{ url_for('index') }}">Back to Home Page</a>
+</div>
+</body>
 </html>
