--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@ h2 {
 </head>
 <body>
 <div class="w3-container w3-teal">
-  <h1>Home</h1>
+  <h1>Welcome to RSA explore app</h1>
 </div>
 <ul>
     <li style="color:green;"><a style="color:green;" href="{{ url_for('generate_keys_pre') }}">Generate Keys_Check</a><br/></li>
